# plot-extractor

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml  requirements.txt  skill.md
.claude/: settings.local.json
.claude/skills/plot-extractor/: SKILL.md
.github/workflows/: pylint.yml
development/: OPTIMIZATION_PROGRESS.md
docs/: ARCHITECTURAL_CHANGES_IMPL.md  BASELINE_EVALUATION.md  CHANGELOG.md  COLLABORATION_GUIDELINES.md  CURRENT_STATUS_AND_NEXT_PHASE.md  EXTRACTION_BOTTLENECKS_SKILL_PLAN.md  META_ISOLATION_BOUNDARY.md  OPTIMIZATION_MILESTONE_LOG.md  OPTIMIZATION_PROGRESS.md  PERFORMANCE_OPTIMIZATION_STRATEGY.md  USER_GUIDE.md  VALIDATION_PROGRESS_2026_05_01_GLANI_TMLOG.md
docs/design/: design critics 1.md  design critics 2.md
docs/development/: DEVELOPMENT_PROGRESS_ROUND_2026_05_02_LOG_PERF.md  PROGRESS_INDEX.md  VALIDATION_PROGRESS_2026_05_01.md
docs/technology-lib/: LEARNING_REPORT_DOCLING_CHART_AXIS_LABEL_PIPELINE_2026_04_30.md  RESEARCH_REPORT_EVALUATION_2026_04_29.md  RESEARCH_REPORT_ROUND2_2026_04_29.md
docs/technology-lib/log-axis-investigation/: CORRECTED_SUMMARY.md  FINAL_REPORT.md  ROUND1_DIAGNOSIS.md  ROUND1_RESULTS.md  ROUND2_SOLUTION_DESIGN.md  ROUND3_VERIFICATION.md  ROUND4_CORRECTED_DIAGNOSIS.md  ROUND5_FINAL_SOLUTION.md  search_L1_decade_boundary.json  (+15 more)
plot_extractor/: __init__.py  config.py  main.py
plot_extractor/core/: adaptive_strategy.py  axis_calibrator.py  axis_candidates.py  axis_detector.py  chart_type_guesser.py  confidence.py  data_extractor.py  formula_batch_queue.py  formula_ocr.py  image_loader.py  label_crop_planner.py  llm_policy_router.py  ocr_reader.py  plot_rebuilder.py  policy_router.py  scale_detector.py  scatter_overlap.py  series_candidates.py  skeleton_graph.py  skeleton_path.py  text_instance_locator.py
plot_extractor/geometry/: __init__.py  grid_suppress.py  legend_bind.py
plot_extractor/layout/: __init__.py  chart_structure.py  panel_split.py  plot_area.py  text_roi.py
plot_extractor/service/: __init__.py  mcp_server.py  schemas.py
plot_extractor/utils/: image_utils.py  math_utils.py  ssim_compare.py
samples/: 01_simple_linear_meta.json  02_log_y_meta.json  03_loglog_meta.json  04_dual_y_meta.json  05_inverted_y_meta.json  06_scatter_meta.json  07_multi_series_meta.json  08_log_x_meta.json  09_no_grid_meta.json  10_dense_meta.json
tests/: backfill_metadata_tags.py  batch_pipeline_smoke.py  batch_pipeline_sweep.py  formula_batch_queue_smoke.py  generate_samples.py  generate_test_data.py  generate_test_data_v2.py  generate_test_data_v3.py  generate_test_data_v4.py  generate_test_data_v4a.py  test_adaptive_strategy.py  test_axis_candidates.py  test_candidate_priority.py  test_chart_structure.py  test_fft_grid_removal.py  test_formula_batch_planner.py  test_formula_batch_queue.py  test_formula_gate.py  test_frangi_pipeline.py  test_label_crop_planner.py  test_multi_hypothesis_calibration.py  test_ocr_anchors.py  test_scatter_overlap.py  test_series_candidates.py  test_skeleton_graph.py  test_skeleton_path.py  test_stage_timing.py  test_text_instance_locator.py  validate_by_type.py  validate_loop.py  validate_v4a_routes.py
(+66 files in other folders)
