[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-extractor"
version = "0.1.0"
description = "Automated data extraction from chart images with axis calibration and validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sea-monsters"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
plot-extractor = "plot_extractor.main:main"

[tool.setuptools.packages.find]
include = ["plot_extractor*"]

[tool.setuptools.package-data]
plot_extractor = ["*.json"]
