[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plot-extractor"
version = "0.1.0"
description = "Automated data extraction from chart images with axis calibration and validation"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "sea-monsters"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Visualization",
]
dependencies = [
    "opencv-python-headless>=4.8.0",
    "numpy>=1.24.0",
    "matplotlib>=3.7.0",
    "pytesseract>=0.3.10",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
formula = [
    "paddlex>=3.5",
    "paddlepaddle>=3.3",
    "pypdfium2>=5.7",
    "opencv-contrib-python>=4.8",
    "tokenizers>=0.20",
    "ftfy>=6.0",
]

[project.scripts]
plot-extractor = "plot_extractor.main:main"

[tool.setuptools.packages.find]
include = ["plot_extractor*"]

[tool.setuptools.package-data]
plot_extractor = ["*.json"]

[tool.pylint.main]
ignored-modules = ["cv2", "PIL.Image"]

[tool.pylint."messages control"]
disable = [
    "missing-function-docstring",
    "missing-class-docstring",
    "too-few-public-methods",
    "too-many-locals",
    "too-many-branches",
    "too-many-statements",
    "too-many-arguments",
    "too-many-positional-arguments",
    "too-many-return-statements",
    "too-many-instance-attributes",
    "too-many-lines",
    "too-many-nested-blocks",
    "duplicate-code",
    "unused-argument",
    "unused-variable",
    "multiple-statements",
    "import-outside-toplevel",
    "redefined-outer-name",
    "wrong-import-position",
    "wrong-import-order",
]
